# ascend-referenceapps

./: CONTRIBUTING.md  OWNERS  README.en.md  README.md  README.zh.md  THIRD PARTY OPEN SOURCE SOFTWARE NOTICE.md  TestAscendIndexTS_Int8Cos
FaceRecognition/: CMakeLists.txt  README.md  THIRD PARTY OPEN SOURCE SOFTWARE NOTICE.md  Third Party Software Install Guide.zh.md  Third Party Software Install Guide_ctrl.zh.md  build.sh
FaceRecognition/Common/: CommandLine.h  Common.h
FaceRecognition/Common/ChannelStatus/: ChannelStatus.cpp  ChannelStatus.h
FaceRecognition/Common/CostStatistic/: CostStatistic.h
FaceRecognition/Common/DataTrans/: DataTrans.proto
FaceRecognition/Common/DeliveryChannel/: DeliveryChannel.cpp  DeliveryChannel.h
FaceRecognition/Common/FileEx/: FileEx.cpp  FileEx.h
FaceRecognition/Common/Hdc/: Hdc.cpp  Hdc.h
FaceRecognition/Common/HdcChannel/: HdcChannel.cpp  HdcChannel.h
FaceRecognition/Common/Proto/: vehicle.proto
FaceRecognition/Common/RegistApi/: RegistApi.cpp  RegistApi.h
FaceRecognition/Common/SystemManager/: SystemManager.cpp  SystemManager.h
FaceRecognition/Common/TestCV/: TestCV.cpp  TestCV.h
FaceRecognition/HostCPU/: CMakeLists.txt  HostMain.cpp
FaceRecognition/cmake/: Ascend.cmake  FindFFMPEG.cmake
FaceRecognition/data/config/: setup.config
FeatureRetrieval/ascendfaiss/: CMakeLists.txt  Makefile  README.en.md  README.zn.md  THIRD PARTY OPEN SOURCE SOFTWARE NOTICE.md  autogen.sh  build.sh  configure  configure.ac  install.sh  makefile.inc.in
FeatureRetrieval/ascendfaiss/acinclude/: ax_check_cpu.m4  fa_check_ascend.m4  fa_check_faiss.m4
FeatureRetrieval/ascendfaiss/ascend/: AscendAutoTune.cpp  AscendAutoTune.h  AscendCloner.cpp  AscendCloner.h  AscendClonerOptions.cpp  AscendClonerOptions.h  AscendClustering.cpp  AscendClustering.h  AscendIndex.cpp  AscendIndex.h  AscendIndexFlat.cpp  AscendIndexFlat.h  AscendIndexIVF.cpp  AscendIndexIVF.h  AscendIndexIVFFlat.cpp  AscendIndexIVFFlat.h  AscendIndexIVFPQ.cpp  AscendIndexIVFPQ.h  AscendIndexIVFSQ.cpp  AscendIndexIVFSQ.h  AscendIndexInt8.cpp  AscendIndexInt8.h  AscendIndexInt8Flat.cpp  AscendIndexInt8Flat.h  AscendIndexInt8IVF.cpp  AscendIndexInt8IVF.h  AscendIndexInt8IVFFlat.cpp  AscendIndexInt8IVFFlat.h  AscendIndexPreTransform.cpp  AscendIndexPreTransform.h  AscendIndexSQ.cpp  AscendIndexSQ.h  AscendNNDimReduction.cpp  AscendNNDimReduction.h  AscendVTCloner.cpp  AscendVTCloner.h  AscendVectorTransform.cpp  AscendVectorTransform.h  CMakeLists.txt
FeatureRetrieval/ascendfaiss/ascend/rpc/: AscendRpc.cpp  AscendRpc.h  AscendRpcCommon.h  AscendRpcIndexFlat.cpp  AscendRpcIndexFlat.h  AscendRpcIndexIVF.cpp  AscendRpcIndexIVF.h  AscendRpcIndexIVFFlat.cpp  AscendRpcIndexIVFFlat.h  AscendRpcIndexInt8.cpp  AscendRpcIndexInt8.h  AscendRpcIndexInt8Flat.cpp  AscendRpcIndexInt8Flat.h  AscendRpcIndexInt8IVF.cpp  AscendRpcIndexInt8IVF.h  AscendRpcIndexInt8IVFFlat.cpp  AscendRpcIndexInt8IVFFlat.h  AscendRpcIndexPreTransform.cpp  AscendRpcIndexPreTransform.h  AscendRpcIndexSQ.cpp  AscendRpcIndexSQ.h  AscendRpcNNDimReduction.cpp  AscendRpcNNDimReduction.h  HdcClient.cpp  HdcClient.h
FeatureRetrieval/ascendfaiss/ascend/utils/: AscendThreadPool.cpp  AscendThreadPool.h  AscendUtils.cpp  AscendUtils.h  fp16.cpp  fp16.h
FeatureRetrieval/ascendfaiss/ascenddaemon/: CMakeLists.txt  StandardAscendResources.cpp  StandardAscendResources.h
FeatureRetrieval/ascendfaiss/ascenddaemon/impl/: AuxIndexStructures.cpp  AuxIndexStructures.h  Index.cpp  Index.h  IndexFlat.cpp  IndexFlat.h  IndexFlatIP.cpp  IndexFlatIP.h  IndexFlatL2.cpp  IndexFlatL2.h  IndexIVF.cpp  IndexIVF.h  IndexIVFFlat.cpp  IndexIVFFlat.h  IndexIVFPQ.cpp  IndexIVFPQ.h  IndexIVFSQ.cpp  IndexIVFSQ.h  IndexIVFSQIP.cpp  IndexIVFSQIP.h  IndexIVFSQL2.cpp  IndexIVFSQL2.h  IndexInt8.cpp  IndexInt8.h  IndexInt8Flat.cpp  IndexInt8Flat.h  IndexInt8FlatCos.cpp  IndexInt8FlatCos.h  IndexInt8FlatL2.cpp  IndexInt8FlatL2.h  IndexInt8IVF.cpp  IndexInt8IVF.h  IndexInt8IVFFlat.cpp  IndexInt8IVFFlat.h  IndexInt8IVFFlatCos.cpp  IndexInt8IVFFlatCos.h  IndexInt8IVFFlatL2.cpp  IndexInt8IVFFlatL2.h  IndexPreTransform.cpp  IndexPreTransform.h  (+10 more)
FeatureRetrieval/ascendfaiss/ascenddaemon/rpc/: HdcServer.cpp  HdcServer.h  RpcServer.cpp  SessionHandler.cpp  SessionHandler.h
FeatureRetrieval/ascendfaiss/ascenddaemon/utils/: AscendAssert.h  AscendException.cpp  AscendException.h  AscendMemory.cpp  AscendMemory.h  AscendOpDesc.cpp  AscendOpDesc.h  AscendOperator.cpp  AscendOperator.h  AscendStackMemory.cpp  AscendStackMemory.h  AscendTensor.h  AscendTensorInl.h  AscendThreadPool.cpp  AscendThreadPool.h  AscendUtils.cpp  AscendUtils.h  DeviceVector.h  DeviceVectorInl.h  DistanceMatrixOp.cpp  DistanceMatrixOp.h  HeapSort.h  Limits.h  MemorySpace.cpp  MemorySpace.h  ModelProcess.cpp  ModelProcess.h  TopkOp.cpp  (+5 more)
FeatureRetrieval/ascendfaiss/cmake/: Ascend.cmake
FeatureRetrieval/ascendfaiss/common/: AscendIndex.proto  HdcBase.cpp  HdcBase.h  RpcUtils.h
FeatureRetrieval/ascendfaiss/ops/: CMakeLists.txt  build.sh
FeatureRetrieval/ascendfaiss/python/: Makefile  TestAscendIndexFlat.py  TestAscendIndexFlatSift1M.py  TestAscendIndexIVFFlat.py  TestAscendIndexIVFFlatSift1M.py  TestAscendIndexIVFPQ.py  TestAscendIndexIVFSQ.py  TestAscendIndexIVFSQSift1M.py  TestAscendIndexInt8FlatSift1M.py  TestAscendIndexInt8IVFFlatSift1M.py  TestAscendIndexPreTransform.py  TestAscendIndexPreTransformSift1M.py  TestAscendIndexSQ.py  TestAscendIndexSQSift1M.py  TestIndexAscendToCpu.py  TestIndexCpuToAscend.py  TestSift1M.py  ascendargs.py  ascendfaiss.py  common.py  datasets.py  setup.py  swig_ascendfaiss.swig
FeatureRetrieval/ascendfaiss/tools/: common.py  flat_generate_model.py  int8flat_generate_model.py  ivfflat_generate_model.py  ivfint8flat_generate_model.py  ivfpq_generate_model.py  ivfsq8_generate_model.py  para_table.xml  pcar_generate_model.py  run_generate_model.py  set_log_level.py  sq8_generate_model.py
IdRecognition/: CMakeLists.txt  README.zh.md  build.sh
IdRecognition/src/Common/: CommandLine.h  CommonFuction.h
IdRecognition/src/HostCPU/: CMakeLists.txt  HostMain.cpp
(+300 files in other folders)
